MPI funtionality in testing, seems to work with only issues decrypting for some reason