@@ -13,6 +13,9 @@ import java.security.*;
 import java.util.Arrays;
 import java.util.Base64;
 
+import static clivet268.Util.Univ.getRandString;
+import static clivet268.Util.Univ.getrandname;
+
 public class FileEncrypterDecrypter{
 
     private static SecretKeySpec secretKey;
@@ -57,6 +60,7 @@ public class FileEncrypterDecrypter{
     public static String decrypt(final String strToDecrypt, final String secret) {
         try {
             setKey(secret);
+            System.out.println(secretKey);
             Cipher cipher = Cipher.getInstance("AES/ECB/PKCS5PADDING");
             //TODO CBC mode
             cipher.init(Cipher.DECRYPT_MODE, secretKey);
@@ -88,6 +92,25 @@ public class FileEncrypterDecrypter{
         Files.write(Path.of(Univ.enforcrybasepath + "." + file.hashCode() + "key"),kii.getBytes());
     }
 
+    public static void fek(String kin) throws IOException, NoSuchAlgorithmException {
+        File file = Univ.filechooser();
+        Path of = Path.of(Univ.enforcrybasepath);
+        if(!Files.exists(of)) {
+            Files.createDirectory(of);
+        }
+        String kii = kin;
+        assert file != null;
+        byte[] bytes = Files.readAllBytes(file.toPath());
+        String s = Base64.getEncoder().encodeToString(bytes);
+        String out = encrypt(s, kii);
+
+        byte[] decode = Base64.getDecoder().decode(out.getBytes());
+        Path pathout = Paths.get(Univ.enforcrybasepath + file.hashCode());
+        Files.write(pathout, decode);
+    }
+
+
+
     public static void fek(File file) throws IOException, NoSuchAlgorithmException {
         Path of = Path.of(Univ.enforcrybasepath);
         if(!Files.exists(of)) {
@@ -102,26 +125,45 @@ public class FileEncrypterDecrypter{
         byte[] decode = Base64.getDecoder().decode(out.getBytes());
         Path pathout = Paths.get(Univ.enforcrybasepath + file.hashCode());
         Files.write(pathout, decode);
-        System.out.println("Key saved, make sure you get all of it\n_\n\n");
+        System.out.println("Key saved, make sure you get all of it ;)\n_\n\n");
         Files.write(Path.of(Univ.enforcrybasepath + "." + file.hashCode() + "key"),kii.getBytes());
     }
 
-    public static void fekpass(File file, String p) throws IOException, NoSuchAlgorithmException {
-        Path of = Path.of(Univ.enforcrybasepath);
-        if(!Files.exists(of)) {
-            Files.createDirectory(of);
-        }
-        String kii = gen2048();
+    public static void fek(File file, String p) throws IOException, NoSuchAlgorithmException {
         assert file != null;
         byte[] bytes = Files.readAllBytes(file.toPath());
         String s = Base64.getEncoder().encodeToString(bytes);
-        String out = encrypt(s, kii);
+        String out = encrypt(s, p);
 
+        assert out != null;
         byte[] decode = Base64.getDecoder().decode(out.getBytes());
         Path pathout = Paths.get(Univ.enforcrybasepath + file.hashCode());
         Files.write(pathout, decode);
-        System.out.println("Key saved, make sure you get all of it\n_\n\n");
-        Files.write(Path.of(Univ.enforcrybasepath + "." + file.hashCode() + "key"),kii.getBytes());
+    }
+    public static void fek(File file, File filein, String p) throws IOException, NoSuchAlgorithmException {
+        assert file != null;
+        byte[] bytes = Files.readAllBytes(file.toPath());
+        String s = Base64.getEncoder().encodeToString(bytes);
+        String out = encrypt(s, p);
+
+        assert out != null;
+        byte[] decode = Base64.getDecoder().decode(out.getBytes());
+        Path pathout = Paths.get(filein.getAbsolutePath() + file.hashCode());
+        Files.write(pathout, decode);
+    }
+    public static void fek(File file, String filein, String p, String of) throws IOException, NoSuchAlgorithmException {
+        byte[] bytes = Files.readAllBytes(file.toPath());
+        String s = Base64.getEncoder().encodeToString(bytes);
+        String out = encrypt(s, p);
+
+        byte[] decode = Base64.getDecoder().decode(out.getBytes());
+        System.out.println("Shaka boom?");
+        String pathout = filein + File.separator + getrandname() + "." + of;
+        System.out.println("Shaka boom");
+        Path of1 = Path.of(pathout);
+        Files.createFile(of1);
+        Files.write(of1, decode);
+        System.out.println("Sucka boom");
     }
     public static void fdk(File file, String kii) throws IOException, NoSuchAlgorithmException {
         Path of = Path.of(Univ.enforcrybasepath);
